# Beginning-of-Infinity

./: README.md  main.py  pyproject.toml
practice/: mnist.py  pyproject.toml
practice/huggingface-prac/: load_model.py
practice/modern-transformer/: transformer.py
practice/rethinkfun/: clean.py  dataset_pra.py  einops_pra.py  mini-model.py  mnist_torch.py
